Improve overall logging